--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Timed Coding Quiz</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="quizContainer">
@@ -18,6 +18,7 @@
     <button id="submitQuiz" style="display: none;" onclick="submitQuiz()">Submit Quiz</button>
     <br><br>
     <div id="score"></div>
+    <div id="highScores"></div>
   </div>
   <script src="script.js"></script>
 </body>
